--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.andresd.socialverse.ui.home.HomeFragment"
+        android:name="com.andresd.socialverse.ui.main.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/navigation_search"
-        android:name="com.andresd.socialverse.ui.search.SearchFragment"
+        android:name="com.andresd.socialverse.ui.main.search.SearchFragment"
         android:label="@string/title_search"
         tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/navigation_groups"
-        android:name="com.andresd.socialverse.ui.groups.GroupsFragment"
+        android:name="com.andresd.socialverse.ui.main.groups.GroupsFragment"
         android:label="@string/title_groups"
         tools:layout="@layout/fragment_groups" />
 
