--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -10,6 +10,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ui.login.LoginActivity">
 
+<!--    <include layout="@layout/sign_in_fragment" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
