Finished Separating SignInFragment and SignUpFragment; implemented Navigation.
Pending create signup forms.

Investigate more about safe args, if no default value is given, then, apparently, a value must be given on the constructor.

--- a/app/src/main/res/navigation/login_navigation.xml
+++ b/app/src/main/res/navigation/login_navigation.xml
@@ -22,10 +22,10 @@
         <argument
             android:name="email"
             app:argType="string"
-            android:defaultValue='"No Email"' />
+            android:defaultValue=" " />
         <argument
             android:name="password"
             app:argType="string"
-            android:defaultValue="No Password" />
+            android:defaultValue=" " />
     </fragment>
 </navigation>
