--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary">#00BFD6</color>
+    <color name="primary_light">#63F2FF</color>
+    <color name="primary_dark">#008EA5</color>
+    <color name="secondary">#004E59</color>
+    <color name="secondary_light">#3D7A86</color>
+    <color name="secondary_dark">#002630</color>
 </resources>
