--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -15,7 +15,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary">
+
+            </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.AppBarLayout>
+
         <FrameLayout
+            android:layout_gravity="bottom"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -27,8 +41,6 @@
                 app:defaultNavHost="true"
                 app:navGraph="@navigation/mobile_navigation2" />
         </FrameLayout>
-
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
