--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,6 +33,9 @@
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorOnSecondary">@color/white</item>
     </style>
-<!--    <style name="Theme.SocialVerse.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />-->
-<!--    <style name="Theme.SocialVerse.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />-->
+
+    <!-- TODO: parent hacia las anteriores -->
+    <style name="Theme.SocialVerse.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.SocialVerse.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
