--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,12 +8,12 @@
 
     <item
         android:id="@+id/navigation_groups"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/icon_groups"
         android:title="@string/title_groups" />
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/icon_search_black"
         android:title="@string/title_search" />
 
 
