--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/create_group"
+        android:icon="@drawable/icon_add"
+        android:title="Create group"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/sign_out"
         android:icon="@drawable/icon_sign_out"
         android:title="@string/action_sign_out"
