--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,6 +33,15 @@
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorOnSecondary">@color/white</item>
     </style>
-<!--    <style name="Theme.SocialVerse.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />-->
-<!--    <style name="Theme.SocialVerse.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />-->
+
+    <style name="Theme.SocialVerse.NoActionBar.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.SocialVerse.NoActionBar.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.SocialVerse.NoActionBar.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <!--    <style name="Theme.SocialVerse.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />-->
+    <!--    <style name="Theme.SocialVerse.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />-->
 </resources>
