--- a/app/src/main/res/layout/fragment_group_home.xml
+++ b/app/src/main/res/layout/fragment_group_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.group.FirstFragment">
+    tools:context=".ui.group.home.GroupHomeFragment">
 
     <TextView
         android:id="@+id/textview_first"
