--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,17 +19,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <include
-        android:id="@+id/group_card"
-        layout="@layout/cardlayout_group"
-        android:layout_width="0dp"
-        android:visibility="gone"
-        tools:visibility="visible"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@id/search_button"
-        app:layout_constraintStart_toStartOf="@id/search_button"
-        app:layout_constraintTop_toBottomOf="@id/search_button" />
-
     <Button
         android:id="@+id/search_button"
         android:layout_width="0dp"
@@ -45,11 +34,12 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/group_card"
+        app:layout_constraintTop_toBottomOf="@+id/search_button"
+        app:layout_constraintVertical_bias="0.15"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
