--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            app:menu="@menu/menu_options"
             app:popupTheme="@style/Theme.SocialVerse.NoActionBar.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
