Created Abstract classes for Group and User, Deleted old; Implemented GroupCardRecyclerAdapter

--- a/app/src/main/res/navigation/navigation_mobile.xml
+++ b/app/src/main/res/navigation/navigation_mobile.xml
@@ -21,7 +21,7 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_my_groups"
-        android:name="com.andresd.socialverse.ui.main.groups.MyGroupsFragment"
+        android:name="com.andresd.socialverse.ui.main.mygroups.MyGroupsFragment"
         android:label="@string/title_my_groups"
         tools:layout="@layout/fragment_my_groups" />
     <activity
