--- a/app/src/main/res/menu/menu_options.xml
+++ b/app/src/main/res/menu/menu_options.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/create_group"
-        android:icon="@drawable/icon_add"
+        android:id="@+id/refresh"
+        android:icon="@drawable/icon_refresh"
         android:title="Create group"
         android:visible="true"
         app:showAsAction="ifRoom" />
