--- a/app/src/main/res/layout/cardlayout_group.xml
+++ b/app/src/main/res/layout/cardlayout_group.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:background="@color/secondary_light"
+    android:clickable="true"
+    android:foreground="?selectableItemBackground"
     android:padding="4dp"
     app:cardCornerRadius="12dp"
     app:cardElevation="3dp">
