--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -8,16 +8,16 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.SocialVerse.NoActionBar.AppBarOverlay">
+        android:layout_height="wrap_content">
+<!--android:theme="@style/Theme.SocialVerse.NoActionBar.Dark.AppBarOverlay"-->
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:menu="@menu/menu_options"
-            app:popupTheme="@style/Theme.SocialVerse.NoActionBar.PopupOverlay" />
+            app:menu="@menu/menu_group_options"
+            app:popupTheme="@style/Theme.SocialVerse.NoActionBar.Light.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
