--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                app:menu="@menu/menu_options" />
+                app:menu="@menu/menu_main_options" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
