--- a/app/src/main/res/menu/menu_main_options.xml
+++ b/app/src/main/res/menu/menu_main_options.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/refresh"
+        android:id="@+id/menu_item_refresh"
         android:icon="@drawable/icon_refresh"
         android:title="Create group"
         android:visible="true"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/sign_out"
+        android:id="@+id/menu_item_sign_out"
         android:icon="@drawable/icon_sign_out"
         android:title="@string/action_sign_out"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/settings"
+        android:id="@+id/menu_item_settings"
         android:icon="@drawable/icon_settings"
         android:title="@string/label_settings"
         app:showAsAction="never" />
