Created Interface to go the GroupActivity

--- a/app/src/main/res/navigation/navigation_mobile.xml
+++ b/app/src/main/res/navigation/navigation_mobile.xml
@@ -36,6 +36,11 @@
         <argument
             android:name="group_id"
             app:argType="string" />
+        <argument
+            android:name="user_id"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
 
     </activity>
 
