Moved the Interface OnCardItemSelectedListener to a separate file.

--- a/app/src/main/res/navigation/navigation_mobile.xml
+++ b/app/src/main/res/navigation/navigation_mobile.xml
@@ -39,8 +39,7 @@
         <argument
             android:name="user_id"
             app:argType="string"
-            app:nullable="true"
-            android:defaultValue="null" />
+            app:nullable="true" />
 
     </activity>
 
