--- a/app/src/main/res/navigation/navigation_group.xml
+++ b/app/src/main/res/navigation/navigation_group.xml
@@ -15,5 +15,13 @@
         <argument
             android:name="group_id"
             app:argType="string" />
+        <action
+            android:id="@+id/action_GroupHome_to_scheduleFragment"
+            app:destination="@id/schedules" />
     </fragment>
+    <fragment
+        android:id="@+id/schedules"
+        android:name="com.andresd.socialverse.ui.group.ScheduleFragment"
+        android:label="@string/title_schedule"
+        tools:layout="@layout/fragment_schedule_item_list" />
 </navigation>
