Creacion de la interfaz que maneja los horarios.
Falta terminar de implementar como agregar el horario, eliminarlo y modificarlo.

Hay que usar la interfaz OnItemListener para ver que elemento es eliminado o para modificar.

Implementar la forma en la que se inserta un horario a la lista de forma que quede organizado.

--- a/app/src/main/res/navigation/navigation_group.xml
+++ b/app/src/main/res/navigation/navigation_group.xml
@@ -21,7 +21,16 @@
     </fragment>
     <fragment
         android:id="@+id/schedules"
+        android:name="com.andresd.socialverse.ui.group.MySchedulesFragment"
+        android:label="@string/title_schedule"
+        tools:layout="@layout/fragment_my_schedules_list" >
+        <action
+            android:id="@+id/action_schedules_to_addScheduleFragment"
+            app:destination="@id/scheduleFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/scheduleFragment"
         android:name="com.andresd.socialverse.ui.group.ScheduleFragment"
         android:label="@string/title_schedule"
-        tools:layout="@layout/fragment_schedule_item_list" />
+        tools:layout="@layout/fragment_schedule" />
 </navigation>
