--- a/app/src/main/res/layout/fragment_group_home.xml
+++ b/app/src/main/res/layout/fragment_group_home.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="@dimen/fab_margin"
         android:visibility="gone"
         app:srcCompat="@android:drawable/ic_dialog_email"
         tools:visibility="visible" />
