--- a/app/src/main/res/layout/fragment_schedule_item.xml
+++ b/app/src/main/res/layout/fragment_schedule_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:clickable="true"
     android:foreground="?selectableItemBackground"
@@ -13,12 +13,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="24dp">
+        android:layout_height="wrap_content"
+        android:padding="16dp">
 
 
         <TextView
-            android:id="@+id/date_time_text_view"
+            android:id="@+id/date_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,15 +26,24 @@
             tools:text="February 31, 2022" />
 
         <TextView
+            android:id="@+id/time_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            app:layout_constraintStart_toStartOf="@+id/date_text_view"
+            app:layout_constraintTop_toBottomOf="@+id/date_text_view"
+            tools:text="00:00 AM" />
+
+        <TextView
             android:id="@+id/title_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="TextView"
+            android:layout_marginTop="8dp"
+            android:text="Place_Holder"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/date_time_text_view"
-            app:layout_constraintTop_toBottomOf="@+id/date_time_text_view"
+            app:layout_constraintStart_toStartOf="@+id/date_text_view"
+            app:layout_constraintTop_toBottomOf="@+id/time_text_view"
             tools:text="Title" />
 
         <TextView
