Modificacion de la interfaz de los horarios
Creado los atributos para la informacion y para la date,

Modicado navigation_group.xml para que pueda pasar al objeto AbstractScheduleItem.

Falta modificar el comportamiento con lo del el AbstractScheduleItem que se pasa por el navigation y tambien terminar de implementar la forma de agregar en el GroupViewModel. ademas de ver como hacer para distinguir si es para modificar o para agregar.

--- a/app/src/main/res/navigation/navigation_group.xml
+++ b/app/src/main/res/navigation/navigation_group.xml
@@ -32,5 +32,11 @@
         android:id="@+id/scheduleFragment"
         android:name="com.andresd.socialverse.ui.group.ScheduleFragment"
         android:label="@string/title_schedule"
-        tools:layout="@layout/fragment_schedule" />
+        tools:layout="@layout/fragment_schedule" >
+        <argument
+            android:name="scheduleItem"
+            app:argType="com.andresd.socialverse.data.model.AbstractScheduleItem"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
 </navigation>
