Terminada la parte de Agregar Horarios!!!!!!!!
El orden en que los horarios aparecen es de acuerdo a la fecha y la hora.
Si se inserta un horario, este es insertado en la lista en el lugar correspondiente, de acuerdo a su fecha y hora.

La implementación para modificar un horario también esta terminada.

Falta:
- Implementar la interfaz OnItemListener de MySchedulesListFragment, MyScheduleRecyclerViewAdapter para saber cual es el horario a Borrar y/o Borrar.
- Implementar Lectura y Escritura de los horarios a Firestore.

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -35,6 +35,7 @@
             android:layout_marginStart="16dp"
             android:ems="10"
             android:hint="@string/label_title"
+            android:imeOptions="actionNext"
             android:inputType="textPersonName"
             android:maxLength="20"
             android:minHeight="48dp"
@@ -48,6 +49,7 @@
             android:layout_marginStart="16dp"
             android:ems="10"
             android:hint="@string/label_details"
+            android:imeOptions="actionDone"
             android:inputType="textPersonName"
             android:maxLength="40"
             android:minHeight="48dp"
