--- a/app/src/main/res/layout/fragment_my_schedules_list.xml
+++ b/app/src/main/res/layout/fragment_my_schedules_list.xml
@@ -5,7 +5,7 @@
     android:name="com.andresd.socialverse.ui.group.ScheduleFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.group.MySchedulesFragment">
+    tools:context=".ui.group.MySchedulesListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
