Changed log tag from class.getSimpleName to class.getName, to get fully qualified class name

--- a/app/src/main/res/menu/menu_main_options.xml
+++ b/app/src/main/res/menu/menu_main_options.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/menu_item_refresh"
         android:icon="@drawable/icon_refresh"
-        android:title="Create group"
+        android:title="Restart Activity"
         android:visible="true"
         app:showAsAction="ifRoom" />
     <item
