Finished Schedules Implementation.

--- a/app/src/main/res/layout/fragment_schedule_item.xml
+++ b/app/src/main/res/layout/fragment_schedule_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:clickable="true"
+    android:clickable="@bool/schedule_recycler_view_items_clickable"
     android:foreground="?selectableItemBackground"
     android:orientation="vertical"
     app:cardCornerRadius="10dp"
@@ -39,7 +39,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Place_Holder"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/date_text_view"
@@ -51,7 +50,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="TextView"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="@+id/title_text_view"
             app:layout_constraintTop_toBottomOf="@+id/title_text_view"
