--- a/app/src/main/res/navigation/navigation_group.xml
+++ b/app/src/main/res/navigation/navigation_group.xml
@@ -34,7 +34,7 @@
         android:label="@string/title_schedule"
         tools:layout="@layout/fragment_schedule" >
         <argument
-            android:name="itemId"
+            android:name="itemIndex"
             app:argType="integer" />
     </fragment>
 </navigation>
