--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -37,6 +37,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginVertical="10dp"
+        tools:listitem="@layout/cardlayout_group"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tags_checkBox"
         app:layout_constraintStart_toStartOf="@+id/search_group_editText"
