Completely Implemented GUI for university posts on the HomeFragment.
PostRecyclerAdapter.java is completely functional and only requires the data set.

TODO: Implement posts interface for group posts and use PostRecyclerAdapter.

--- a/app/src/main/res/layout/cardlayout_group.xml
+++ b/app/src/main/res/layout/cardlayout_group.xml
@@ -28,7 +28,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@drawable/icon_groups" />
+            app:srcCompat="@drawable/icon_groups" />
 
         <TextView
             android:id="@+id/itemTitle"
