--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="post_group_image_dimen">50dp</dimen>
+    <dimen name="header_text_size">16sp</dimen>
+    <dimen name="name_text_size">12sp</dimen>
 </resources>
