Created GUI for adding posts, and finished Implementation.

--- a/app/src/main/res/layout/fragment_group_home.xml
+++ b/app/src/main/res/layout/fragment_group_home.xml
@@ -7,9 +7,21 @@
     tools:context=".ui.group.GroupHomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
+        <TextView
+            android:id="@+id/nothing_here"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"
+            android:text="@string/nothing_here"
+            app:layout_anchor="@+id/constraintLayout"
+            app:layout_anchorGravity="center" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list"
@@ -32,6 +44,8 @@
         android:visibility="gone"
         app:srcCompat="@android:drawable/ic_dialog_email"
         tools:visibility="visible" />
+
+
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
