Added string resource for Create Post toolbar label.

--- a/app/src/main/res/navigation/navigation_group.xml
+++ b/app/src/main/res/navigation/navigation_group.xml
@@ -42,6 +42,6 @@
     <fragment
         android:id="@+id/createPostFragment"
         android:name="com.andresd.socialverse.ui.group.CreatePostFragment"
-        android:label="fragment_create_post"
+        android:label="@string/header_create_post"
         tools:layout="@layout/fragment_create_post" />
 </navigation>
